loading all data now

--- a/SegmentedHeatmap.html
+++ b/SegmentedHeatmap.html
@@ -81,7 +81,7 @@
 
   <script>
   var ids = ['CPV-C', 'CPV-D', 'CPV-E', 'CPV-F', 'CPV-G', 'CPV-H', 'CPV-I', 'CPV-J']
-  ids = ['CPV-C', 'CPV-D']
+  // ids = ['CPV-C', 'CPV-D']
   var classKeys = ['overviewHist', 'detailHist', 'graph', 'table', 'offices', 'info']
 
   var dataTable = []
