--- a/VideoHeatmap.html
+++ b/VideoHeatmap.html
@@ -28,30 +28,32 @@
   <ul id='nav'>
     <li class='nav-item'><a class='active' href='VideoHeatmap.html'>Video Heatmap</a></li>
     <li class='nav-item'><a href='OverviewDetail.html'>Overview</a></li>
-    <li class='nav-item'><a href='SegmentedHeatmap.html'>Segmented Heatmap</a></li>
+    <li class='nav-item'><a href='SegmentedHeatmap.html'>Segmented Heatmaps</a></li>
     <li class='nav-item-right'>
       <span>Dataset</span>
       <select class='dd' id='dataset' onchange='switchSet()'>
-        <option value='0'>CPV-C</option>
-        <option value='1'>CPV-D</option>
-        <option value='2'>CPV-E</option>
-        <option value='3'>CPV-F</option>
-        <option value='4'>CPV-G</option>
-        <option value='5'>CPV-H</option>
-        <option value='6'>CPV-I</option>
-        <option value='7'>CPV-J</option>
+        <option value='0'>Cyber-C</option>
+        <option value='1'>Cyber-D</option>
+        <option value='2'>Cyber-E</option>
+        <option value='3'>Cyber-F</option>
+        <option value='4'>Cyber-G</option>
+        <option value='5'>Cyber-H</option>
+        <option value='6'>Cyber-I</option>
+        <option value='7'>Cyber-J</option>
       </select>
     </li>
   </ul>
 
-  <div class='row'>
-    <div style='display: inline-block; width: 10px; height: 10px; background-color: #6f1996'></div><span>Mouse</span>
-    <div style='display: inline-block; width: 10px; height: 10px; background-color: #52ef99'></div><span>Eye</span>
-  </div>
+  <div id='main'>
+    <div class='row'>
+      <div style='display: inline-block; width: 10px; height: 10px; background-color: #6f1996'></div><span>Mouse</span>
+      <div style='display: inline-block; width: 10px; height: 10px; background-color: #52ef99'></div><span>Eye</span>
+    </div>
 
-  <div id='video-container' class='row' style='position: relative; margin: 0 auto;'>
-    <video id='user-video'></video>
-    <canvas id='video-overlay'></canvas>
+    <div id='video-container' class='row' style='position: relative; margin: 0 auto;'>
+      <video id='user-video'></video>
+      <canvas id='video-overlay'></canvas>
+    </div>
   </div>
 
 </body>
