hotfixed overview not loading

--- a/VideoHeatmap.html
+++ b/VideoHeatmap.html
@@ -8,6 +8,7 @@
 
   <script src='./data/video-links.js'></script>
 
+  <script src='ID.js'></script>
   <script src='./scripts/util.js'></script>
   <script src='./scripts/Tooltip.js'></script>
   <script src='./scripts/drawBbox.js'></script>
