--- a/OverviewDetail.html
+++ b/OverviewDetail.html
@@ -6,6 +6,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js'></script>
 
+  <script src='ID.js'></script>
   <script src='./scripts/util.js'></script>
   <script src='./scripts/Tooltip.js'></script>
   <script src='./scripts/drawBbox.js'></script>
